[project]
name = "cys406-assign2"
version = "0.1.0"
description = "Applied Cryptography Assignment 2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygobject>=3.52.3",
    "pygobject-stubs>=2.13.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "D",
  "UP",
  "YTT",
  "ANN",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "EM",
  "EXE",
  "ISC",
  "ICN",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  "ARG",
  "PTH",
  "TD",
  "TC",
  "FIX",
  "ERA",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "PERF",
  "FURB",
  "LOG",
  "RUF",
]


extend-per-file-ignores."test_*" = ["S101", "S311", "INP001", "PLR2004", "SLF001"]
ignore = ["D203", "D212", "COM812", "ISC001", "TD002", "TD003", "FIX", "E402"]

